Add grid and mobile view

--- a/Personal Blog Website/index.html
+++ b/Personal Blog Website/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8" />
   <title>Personal Blog Website</title>
   <meta name="description" content="A Personal Blog Website" />
-  <link rel="stylesheet" href="/css/style.css"> 
+  <link rel="stylesheet" href="/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -16,37 +17,41 @@
       </div>
       <div id="categories-bar">
         <div class="category">
-          <h2>Category</h2>
+          <p>Category</p>
         </div>
         <div class="category">
-          <h2>Category</h2>
+          <p>Category</p>
         </div>
         <div class="category">
-          <h2>Category</h2>
-        </div>
-        <div class="category">
-          <h2>Category</h2>
+          <p>Category</p>
         </div>
       </div>
     </header>
     <section id="post-cards">
       <div class="card">
-        <h3>Card</h3>
-        <p>Card text</p>
+        <img class="card-image" src="/img/anna-auza-0QN0ht21eLk-unsplash.jpg" alt="">
+        <p class="date">APRIL 20th, 2020</p>
+        <h3 class="blog-post-title">Example Blog Post</h3>
+        <p class="blog-card-text">This card is an example of a post.</p>
+        <div class="read-button">Read More</div>
+      </div>
+
+      <div class="card">
+        <h3 class="blog-post-title">Example Blog Post</h3>
+        <p>This card is an example of a post</p>
       </div>
       <div class="card">
-        <h3>Card</h3>
-        <p>Card text</p>
+        <h3 class="blog-post-title">Example Blog Post</h3>
+        <p>This card is an example of a post</p>
       </div>
       <div class="card">
-        <h3>Card</h3>
-        <p>Card text</p>
-      </div>
-      <div class="card">
-        <h3>Card</h3>
-        <p>Card text</p>
+        <h3 class="blog-post-title">Example Blog Post</h3>
+        <p>This card is an example of a post</p>
       </div>
     </section>
+    <div class="about">
+      <h2>About</h2>
+    </div>
     <footer>
       Copyright © 2020
     </footer>
