--- a/Personal Blog Website/index.html
+++ b/Personal Blog Website/index.html
@@ -17,40 +17,50 @@
       </div>
       <div id="categories-bar">
         <div class="category">
-          <p>Category</p>
+          <p>Archive</p>
         </div>
         <div class="category">
-          <p>Category</p>
+          <p>Connect</p>
         </div>
         <div class="category">
-          <p>Category</p>
+          <p>About</p>
         </div>
       </div>
     </header>
     <section id="post-cards">
       <div class="card">
         <img class="card-image" src="/img/anna-auza-0QN0ht21eLk-unsplash.jpg" alt="">
-        <p class="date">APRIL 20th, 2020</p>
+        <p class="date">APRIL 20TH, 2020</p>
         <h3 class="blog-post-title">Example Blog Post</h3>
         <p class="blog-card-text">This card is an example of a post.</p>
-        <div class="read-button">Read More</div>
+        <a href="/blog-post.html" class="read-button">Read More</a>
       </div>
 
       <div class="card">
+        <img class="card-image" src="/img/dave-hBhfEXkihOs-unsplash.jpg" alt="">
+        <p class="date">APRIL 20TH, 2020</p>
         <h3 class="blog-post-title">Example Blog Post</h3>
-        <p>This card is an example of a post</p>
+        <p class="blog-card-text">This card is an example of a post.</p>
+        <a href="/blog-post.html" class="read-button">Read More</a>
       </div>
       <div class="card">
+        <img class="card-image" src="/img/james-lee-KkrxI7z7vEg-unsplash.jpg" alt="">
+        <p class="date">APRIL 20TH, 2020</p>
         <h3 class="blog-post-title">Example Blog Post</h3>
-        <p>This card is an example of a post</p>
+        <p class="blog-card-text">This card is an example of a post.</p>
+        <a href="/blog-post.html" class="read-button">Read More</a>
       </div>
       <div class="card">
+        <img class="card-image" src="/img/matthew-kosloski-jD0JGSEaAXQ-unsplash.jpg" alt="">
+        <p class="date">APRIL 20TH, 2020</p>
         <h3 class="blog-post-title">Example Blog Post</h3>
-        <p>This card is an example of a post</p>
+        <p class="blog-card-text">This card is an example of a post.</p>
+        <a href="/blog-post.html" class="read-button">Read More</a>
       </div>
     </section>
-    <div class="about">
-      <h2>About</h2>
+    <div class="sidebar">
+      <h2>Sidebar</h2>
+      <p>Sidebar text text</p>
     </div>
     <footer>
       Copyright © 2020
