Finish main page

--- a/Personal Blog Website/index.html
+++ b/Personal Blog Website/index.html
@@ -17,13 +17,13 @@
       </div>
       <div id="categories-bar">
         <div class="category">
-          <p>Archive</p>
+          <a href="#">Home</a>
         </div>
         <div class="category">
-          <p>Connect</p>
+          <a href="#">Archive</a>
         </div>
         <div class="category">
-          <p>About</p>
+          <a href="#">About</a>
         </div>
       </div>
     </header>
@@ -59,8 +59,19 @@
       </div>
     </section>
     <div class="sidebar">
-      <h2>Sidebar</h2>
-      <p>Sidebar text text</p>
+      <img class="profile-image" src="/img/faultycamera-jRIstMZXUlA-unsplash.jpg" alt="">
+      <h2>Welcome</h2>
+      <p class="sidebar-text">Text describing the blog and the blogger. Text describing the blog and the blogger. Text
+        describing the blog
+        and the blogger.</p>
+      <input class="search-bar" type="text" placeholder="Search">
+      <div class="categories-sidebar">
+        <h3>Categories</h3>
+        <a class="categories-text" href="#">Category 1</a>
+        <a class="categories-text" href="#">Category 2</a>
+        <a class="categories-text" href="#">Category 3</a>
+        <a class="categories-text" href="#">Category 4</a>
+      </div>
     </div>
     <footer>
       Copyright © 2020
