Build blog post page

--- a/Personal Blog Website/index.html
+++ b/Personal Blog Website/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Personal Blog Website</title>
   <meta name="description" content="A Personal Blog Website" />
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/main.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -29,7 +29,7 @@
     </header>
     <section id="post-cards">
       <div class="card">
-        <img class="card-image" src="/img/anna-auza-0QN0ht21eLk-unsplash.jpg" alt="">
+        <img class="card-image" src="/img/anna-auza-0QN0ht21eLk-unsplash.jpg" alt="Small plant">
         <p class="date">APRIL 20TH, 2020</p>
         <h3 class="blog-post-title">Example Blog Post</h3>
         <p class="blog-card-text">This card is an example of a post.</p>
@@ -37,21 +37,21 @@
       </div>
 
       <div class="card">
-        <img class="card-image" src="/img/dave-hBhfEXkihOs-unsplash.jpg" alt="">
+        <img class="card-image" src="/img/dave-hBhfEXkihOs-unsplash.jpg" alt="Ocean">
         <p class="date">APRIL 20TH, 2020</p>
         <h3 class="blog-post-title">Example Blog Post</h3>
         <p class="blog-card-text">This card is an example of a post.</p>
         <a href="/blog-post.html" class="read-button">Read More</a>
       </div>
       <div class="card">
-        <img class="card-image" src="/img/james-lee-KkrxI7z7vEg-unsplash.jpg" alt="">
+        <img class="card-image" src="/img/james-lee-KkrxI7z7vEg-unsplash.jpg" alt="Green plant">
         <p class="date">APRIL 20TH, 2020</p>
         <h3 class="blog-post-title">Example Blog Post</h3>
         <p class="blog-card-text">This card is an example of a post.</p>
         <a href="/blog-post.html" class="read-button">Read More</a>
       </div>
       <div class="card">
-        <img class="card-image" src="/img/matthew-kosloski-jD0JGSEaAXQ-unsplash.jpg" alt="">
+        <img class="card-image" src="/img/matthew-kosloski-jD0JGSEaAXQ-unsplash.jpg" alt="Red rocks">
         <p class="date">APRIL 20TH, 2020</p>
         <h3 class="blog-post-title">Example Blog Post</h3>
         <p class="blog-card-text">This card is an example of a post.</p>
@@ -59,11 +59,9 @@
       </div>
     </section>
     <div class="sidebar">
-      <img class="profile-image" src="/img/faultycamera-jRIstMZXUlA-unsplash.jpg" alt="">
+      <img class="profile-image" src="/img/faultycamera-jRIstMZXUlA-unsplash.jpg" alt="Avatar">
       <h2>Welcome</h2>
-      <p class="sidebar-text">Text describing the blog and the blogger. Text describing the blog and the blogger. Text
-        describing the blog
-        and the blogger.</p>
+      <p class="sidebar-text">Author info: name, title, current company/school, short bio.</p>
       <input class="search-bar" type="text" placeholder="Search">
       <div class="categories-sidebar">
         <h3>Categories</h3>
