Fix active section, README, and navbar display

--- a/Project 2 - Dynamic Landing Page/index.html
+++ b/Project 2 - Dynamic Landing Page/index.html
@@ -93,10 +93,12 @@
           porttitor. Suspendisse imperdiet porttitor tortor, eget elementum tortor mollis non.</p>
       </div>
     </section>
+    <button id="scrollButton">&uarr;</button>
   </main>
   <footer class="page__footer">
     <p>&copy Udacity</p>
   </footer>
   <script type="text/javascript" src="/js/app.js"></script>
 </body>
+
 </html>
